# mcp-tool-gateway

./: DESIGN.md  README.md  SKILL.md  pyproject.toml  requirements.txt
src/mcp_gateway/: __init__.py  config.py  main.py
src/mcp_gateway/api/: __init__.py
src/mcp_gateway/core/: __init__.py  escrow.py  mcp.py  payment.py  registry.py
src/mcp_gateway/discovery/: __init__.py  search.py
src/mcp_gateway/execution/: __init__.py  executor.py  sandbox.py
src/mcp_gateway/security/: __init__.py  auth.py  crypto.py  fraud.py
tests/: __init__.py  test_imports.py
