# MCP Tool Gateway - Python Implementation

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "A decentralized, agent-native tool marketplace with x402 payment integration"
authors = [
    {name = "@openclaw-rhantolk"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "tool", "marketplace", "payment", "x402", "ai-agents"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
web3 = [
    "web3>=6.15.0",
    "eth-account>=0.9.0",
]
all = [
    "mcp-gateway[dev,web3]",
]

[project.urls]
Homepage = "https://github.com/openclaw/mcp-tool-gateway"
Documentation = "https://github.com/openclaw/mcp-tool-gateway#readme"
Repository = "https://github.com/openclaw/mcp-tool-gateway"
Issues = "https://github.com/openclaw/mcp-tool-gateway/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_gateway = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
